--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -1,9 +1,7 @@
 ---
 title: "Cell type mapping with NNLS"
 date: "Last compiled: `r format(Sys.time(), '%d %B %Y')`"
-output:
-  html_document:
-    code_folding: show
+format: html
 editor: visual
 editor_options: 
   chunk_output_type: inline
